--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <title>NoPaste - No-database paste service</title>
+        <title>Pastebin</title>
         <link
             rel="stylesheet"
             type="text/css"
@@ -26,9 +26,9 @@ npm/microtip@0.2.2/microtip.min.css
             property="og:description"
             content="NoPaste is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
         />
-        <meta property="og:title" content="NoPaste - No-database paste service" />
+        <meta property="og:title" content="PasteBin - No-database paste service" />
         <meta property="og:image" content="https://cdn.jsdelivr.net/gh/bokub/nopaste@images/logo.png" />
-        <meta property="og:url" content="https://nopaste.ml/" />
+        <meta property="og:url" content="https://crossface.cf/pastebin" />
         <meta property="og:type" content="website" />
     </head>
     <body class="m-0">
@@ -54,7 +54,7 @@ npm/microtip@0.2.2/microtip.min.css
         <div id="controls" class="container-fluid shadow-bottom hide-readonly">
             <div class="row align-items-center justify-content-end my-1">
                 <div class="col-auto mb-1">
-                    <h1 class="my-0"><span>{</span> NoPaste <span>}</span></h1>
+                    <h1 class="my-0"><span>{</span> PasteBin <span>}</span></h1>
                 </div>
                 <div class="col-auto">
                     <a
@@ -66,7 +66,7 @@ npm/microtip@0.2.2/microtip.min.css
                         data-micromodal-trigger="description-modal"
                         >About</a
                     >
-                    <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="mx-3">Source</a>
+                    <a href="https://github.com/crossface001/pastebin" rel="noopener" target="_blank" class="mx-3">Source</a>
                 </div>
                 <div class="col"></div>
                 <div class="col-auto my-1">
@@ -111,7 +111,7 @@ npm/microtip@0.2.2/microtip.min.css
         <footer id="footer" class="shadow-top container-fluid">
             <div class="row my-1">
                 <div class="col mono hide-readonly" id="stats">Length: 0 | Lines: 1</div>
-                <div class="col mono show-readonly">Powered by NoPaste</div>
+                <div class="col mono show-readonly">Powered by PasteBin</div>
                 <div class="col-auto mono show-readonly">
                     <a href="javascript:void(0)" onclick="openInNewTab()">
                         <span class="icon-edit"></span>
@@ -123,28 +123,14 @@ npm/microtip@0.2.2/microtip.min.css
         <div id="description-modal" class="modal">
             <div tabindex="-1" data-micromodal-close class="modal-overlay">
                 <div role="dialog" class="modal-content shadow-bottom p-3 m-3" data-micromodal-close>
-                    <h2 class="mt-0">What is NoPaste?</h2>
+                    <h2 class="mt-0">What is PasteBin?</h2>
 
-                    <span class="pink">NoPaste</span> is an open-source website similar to Pastebin where you can store any piece of code,
+                    <span class="pink">PasteBin</span> is an open-source website similar to pastebin.com where you can store any piece of code,
                     and generate links for easy sharing<br /><br />
 
                     However, what makes NoPaste special is that it works with <span class="pink">no database</span>, and
                     <span class="pink">no back-end code</span>.<br />
                     Instead, the data is compressed and <span class="pink">stored entirely in the link</span> that you share, nowhere else!
-
-                    <h3>Because of this design:</h3>
-                    🗑️ Your data <span class="pink">cannot be deleted</span> from NoPaste<br />
-                    🔞 Your data <span class="pink">cannot be censored</span><br />
-                    👁️ The server hosting NoPaste (or any clone of it) <span class="pink">cannot read or access</span> your data<br />
-                    ⏳ Your data will be accessible <span class="pink">forever</span> (as long as you have the link)<br />
-                    🔀 You can access your data on <span class="pink">every NoPaste clone</span>, including
-                    <a href="https://github.com/bokub/nopaste/wiki/Deploy-your-own-version-of-NoPaste" rel="noopener" target="_blank"
-                        >your own</a
-                    ><br />
-                    🔍 Google <span class="pink">will not index</span> your data, even if your link is public<br />
-                    <br />
-                    If you want to know more, you can find more information on
-                    <a href="https://github.com/bokub/nopaste" rel="noopener" target="_blank" class="pink">Github</a>
                     <div class="additional-info">
                         Note: NoPaste is an improved version of Topaz's
                         <a href="https://topaz.github.io/paste" rel="noopener" target="_blank">Paste</a>
@@ -155,7 +141,7 @@ npm/microtip@0.2.2/microtip.min.css
         <div id="error-modal" class="modal">
             <div tabindex="-1" data-micromodal-close class="modal-overlay">
                 <div role="dialog" class="modal-content shadow-bottom p-3 m-3" data-micromodal-close>
-                    NoPaste cannot decompress the URL<br /><br />
+                    PasteBin cannot decompress the URL<br /><br />
                     It's possible that you clicked on an invalid link<br /><br />
                     Sorry about that
                 </div>
