--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ npm/microtip@0.2.2/microtip.min.css
                     <span class="pink">no back-end code</span>.<br />
                     Instead, the data is compressed and <span class="pink">stored entirely in the link</span> that you share, nowhere else!
                     <div class="additional-info">
-                        Note: NoPaste is an improved version of Topaz's
+                        Note: PasteBin is an improved version of Topaz's
                         <a href="https://topaz.github.io/paste" rel="noopener" target="_blank">Paste</a>
                     </div>
                 </div>
