--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ npm/microtip@0.2.2/microtip.min.css
         />
         <link rel="stylesheet" href="style.css" />
         <link href="favicon.ico" rel="icon" type="image/x-icon" />
-        <link rel="canonical" href="https://nopaste.ml/" />
+        <link rel="canonical" href="https://crossface.cf/pasebin" />
         <meta
             name="description"
             property="og:description"
-            content="NoPaste is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
+            content="PasteBin is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
         />
         <meta property="og:title" content="PasteBin - No-database paste service" />
         <meta property="og:image" content="https://cdn.jsdelivr.net/gh/bokub/nopaste@images/logo.png" />
@@ -60,7 +60,7 @@ npm/microtip@0.2.2/microtip.min.css
                     <a
                         href="javascript:void(0)"
                         class="mx-3"
-                        aria-label="Click to know more about NoPaste"
+                        aria-label="Click to know more about PasteBin"
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
@@ -128,7 +128,7 @@ npm/microtip@0.2.2/microtip.min.css
                     <span class="pink">PasteBin</span> is an open-source website similar to pastebin.com where you can store any piece of code,
                     and generate links for easy sharing<br /><br />
 
-                    However, what makes NoPaste special is that it works with <span class="pink">no database</span>, and
+                    However, what makes this PasteBin special is that it works with <span class="pink">no database</span>, and
                     <span class="pink">no back-end code</span>.<br />
                     Instead, the data is compressed and <span class="pink">stored entirely in the link</span> that you share, nowhere else!
                     <div class="additional-info">
