--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ npm/microtip@0.2.2/microtip.min.css
             content="PasteBin is a client-side paste service which works with no database, and no back-end code. The data is stored entirely in the links and nowhere else"
         />
         <meta property="og:title" content="PasteBin - No-database paste service" />
-        <meta property="og:image" content="https://cdn.jsdelivr.net/gh/bokub/nopaste@images/logo.png" />
+        <meta property="og:image" content="/pastebin.png" />
         <meta property="og:url" content="https://crossface.cf/pastebin" />
         <meta property="og:type" content="website" />
     </head>
